--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -3,7 +3,7 @@ name: 🛠️ Feature Request
 description: Suggest an idea to help us improve RiMusic
 title: "[Feature]: "
 labels:
-  - "feature_request"
+  - "enhancement"
 
 body:
   - type: markdown
