--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,7 +117,7 @@
             android:resource="@xml/automotive_app_desc"/>
 
         <meta-data android:name="com.google.android.gms.car.notification.SmallIcon"
-            android:resource="@drawable/app_icon" />
+            android:resource="@drawable/baseline_play_arrow_24" />
 
     </application>
 </manifest>
