Add Stop music playback when app is closed and cleared from recent tasks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,10 @@
         <service
             android:name=".service.PlayerService"
             android:exported="false"
-            android:foregroundServiceType="mediaPlayback">
+            android:foregroundServiceType="mediaPlayback"
+            android:enabled="true"
+            android:stopWithTask="false"
+            >
         </service>
 
         <service android:name=".service.PlayerMediaBrowserService"
