--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <uses-feature    android:name="android.software.leanback" android:required="false" />
     <uses-feature    android:name="android.hardware.touchscreen" android:required="false" />
@@ -60,46 +63,45 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:host="music.youtube.com"
-                    android:pathPrefix="/playlist"
-                    android:scheme="https" />
-                <data
-                    android:host="www.youtube.com"
-                    android:pathPrefix="/playlist"
-                    android:scheme="https" />
-                <data
-                    android:host="m.youtube.com"
-                    android:pathPrefix="/playlist"
-                    android:scheme="https" />
-                <data
-                    android:host="music.youtube.com"
-                    android:pathPrefix="/watch"
-                    android:scheme="https" />
-                <data
-                    android:host="www.youtube.com"
-                    android:pathPrefix="/watch"
-                    android:scheme="https" />
-                <data
-                    android:host="m.youtube.com"
-                    android:pathPrefix="/watch"
-                    android:scheme="https" />
-                <data
-                    android:host="youtu.be"
-                    android:pathPrefix="/"
-                    android:scheme="https" />
-                <data
-                    android:host="music.youtube.com"
-                    android:pathPrefix="/channel"
-                    android:scheme="https" />
-                <data
-                    android:host="www.youtube.com"
-                    android:pathPrefix="/channel"
-                    android:scheme="https" />
-                <data
-                    android:host="m.youtube.com"
-                    android:pathPrefix="/c"
-                    android:scheme="https" />
+                <data android:scheme="https"/>
+                <data android:host="music.youtube.com"/>
+                <data android:pathPrefix="/playlist"/>
+
+                <data android:scheme="https"/>
+                <data android:host="www.youtube.com"/>
+                <data android:pathPrefix="/playlist"/>
+
+                <data android:scheme="https"/>
+                <data android:host="m.youtube.com"/>
+                <data android:pathPrefix="/playlist"/>
+
+                <data android:scheme="https"/>
+                <data android:host="music.youtube.com"/>
+                <data android:pathPrefix="/watch"/>
+
+                <data android:scheme="https"/>
+                <data android:host="www.youtube.com"/>
+                <data android:pathPrefix="/watch"/>
+
+                <data android:scheme="https"/>
+                <data android:host="m.youtube.com"/>
+                <data android:pathPrefix="/watch"/>
+
+                <data android:scheme="https"/>
+                <data android:host="youtu.be"/>
+                <data android:pathPrefix="/"/>
+
+                <data android:scheme="https"/>
+                <data android:host="music.youtube.com"/>
+                <data android:pathPrefix="/channel"/>
+
+                <data android:scheme="https"/>
+                <data android:host="www.youtube.com"/>
+                <data android:pathPrefix="/channel"/>
+
+                <data android:scheme="https"/>
+                <data android:host="m.youtube.com"/>
+                <data android:pathPrefix="/c"/>
             </intent-filter>
 
             <intent-filter>
