--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name = "android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name = "android.permission.MODIFY_AUDIO_SETTINGS"/>
 
     <uses-feature    android:name="android.software.leanback" android:required="false" />
     <uses-feature    android:name="android.hardware.touchscreen" android:required="false" />
@@ -39,7 +41,8 @@
         android:label="${appName}"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
-        android:theme="@style/Theme.ViMusic.NoActionBar">
+        android:theme="@style/Theme.ViMusic.NoActionBar"
+        tools:replace="android:label">
 
 
         <activity
