Removed permissions READ_EXTERNAL_STORAGE and WRITE_EXTERNAL_STORAGE not needed #400

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,7 +128,7 @@
         </service>
 
         <service android:name=".service.PlayerMediaBrowserService"
-            android:exported="true"
+            android:exported="false"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService"/>
